--- a/public/style.css
+++ b/public/style.css
@@ -8,7 +8,8 @@ html {
 }
 body {
   background: #222831;
-  padding: 0 16px;
+  padding: 0;
+  overflow-x: hidden;
 }
 
 header {
@@ -77,4 +78,93 @@ header h1 {
 
 .CompanyBox p span {
   color: #00adb5;
+}
+
+.OpenMenuButton {
+  cursor: default;
+}
+.OpenMenuButton:hover {
+  cursor: pointer;
+  box-shadow: 0px 0px 10px 0px rgba(0, 173, 181, 1);
+}
+
+.Form {
+  position: fixed;
+  display: flex;
+  height: 60%;
+  width: 100%;
+  background-color: #222831;
+  padding: 20px;
+  top: -50%;
+  bottom: 0;
+  left: 0%;
+  right: 0;
+  z-index: -1;
+  transition: all 1s ease;
+  flex-direction: column;
+  justify-content: space-between;
+}
+
+.Formh1 {
+  text-align: center;
+  padding-bottom: 0px;
+  font-size: 30px;
+  width: 150px;
+  font-weight: normal;
+  font-family: "Pirata One", sans-serif;
+}
+
+.MainContainer {
+  position: relative;
+  transition: 0.5s ease-in-out;
+  z-index: -2;
+}
+.Labels {
+  color: #fff;
+  font-family: "Poppins", sans-serif;
+}
+.FormPadder {
+  padding: 10px;
+}
+.inputContainer {
+  display: flex;
+  flex-wrap: wrap;
+  flex-direction: column;
+  align-content: flex-start;
+  justify-content: flex-start;
+  align-items: flex-start;
+}
+.ButtonContainer {
+  display: flex;
+  flex-direction: row-reverse;
+}
+
+.tooltipMenu {
+  position: relative;
+  height: 114px;
+  width: 141px;
+  background-color: #222831;
+  padding: 35px;
+  top: -200%;
+  bottom: 0;
+  float: right;
+  left: 0;
+  right: 0;
+  transform: translateX(106px);
+  z-index: -1;
+  transition: all 1s ease;
+}
+
+.tooltipMenu::after {
+  content: "";
+  position: absolute;
+  display: block;
+  width: 0;
+  height: -30px;
+  border-left: 10px solid transparent;
+  border-right: 10px solid transparent;
+
+  border-bottom: 10px solid #222831;
+  top: -10px;
+  left: 110px;
 }
