--- a/public/style.css
+++ b/public/style.css
@@ -3,17 +3,11 @@ html {
   padding: 0;
   margin: 0;
   box-sizing: border-box;
-<<<<<<< HEAD
   min-width: 100%;
   min-height: 100%;
   max-width: 100%;
   max-height: 100%;
   overflow-x: hidden;
-=======
-}
-html {
-  font-family: 'Poppins', sans-serif;
->>>>>>> ea3f5a90dfd8899e2b725172f5c2a759abefd0ca
 }
 body {
   background: #222831;
@@ -34,7 +28,7 @@ header {
 
 header h1 {
   color: #fff;
-  font-family: 'Pirata One', cursive;
+  font-family: "Pirata One", cursive;
   font-size: xx-large;
   font-weight: 200;
   width: 100px;
@@ -70,7 +64,7 @@ header h1 {
   font-size: larger;
   font-weight: bolder;
   color: #00adb5;
-  font-family: 'Pirata One', sans-serif;
+  font-family: "Pirata One", sans-serif;
   word-spacing: 5px;
   letter-spacing: 2px;
 }
@@ -114,13 +108,13 @@ header h1 {
   font-size: 30px;
   width: 100%;
   font-weight: normal;
-  font-family: 'Pirata One', sans-serif;
+  font-family: "Pirata One", sans-serif;
   transition: all 2s ease;
 }
 
 .Labels {
   color: #fff;
-  font-family: 'Poppins', sans-serif;
+  font-family: "Poppins", sans-serif;
 }
 
 .inputContainer {
@@ -164,7 +158,7 @@ header h1 {
 }
 
 .tooltipMenu::after {
-  content: '';
+  content: "";
   position: absolute;
   display: block;
   width: 0;
