--- a/public/style.css
+++ b/public/style.css
@@ -5,15 +5,17 @@
 }
 html {
   font-family: "Poppins", sans-serif;
+  overflow-x: hidden;
 }
 body {
   background: #222831;
   padding: 0;
   overflow-x: hidden;
+  transition: all 2s ease-in-out;
 }
 
-/* snsdjfn */
 header {
+  z-index: 3;
   background-color: #222831;
   margin: auto -16px;
   padding: 5px 32px;
@@ -24,6 +26,7 @@ header {
 
 header h1 {
   color: #fff;
+  font-family: "Pirata One", cursive;
   font-family: "Pirata One", cursive;
   font-size: xx-large;
   font-weight: 200;
@@ -62,6 +65,7 @@ header h1 {
   font-weight: bolder;
   color: #00adb5;
   font-family: "Pirata One", sans-serif;
+  font-family: "Pirata One", sans-serif;
   word-spacing: 5px;
   letter-spacing: 2px;
 }
@@ -80,9 +84,8 @@ header h1 {
 }
 
 .Form {
-  position: fixed;
-  display: flex;
-  height: 60%;
+  position: relative;
+  height: auto;
   width: 100%;
   background-color: #222831;
   padding: 20px;
@@ -96,6 +99,7 @@ header h1 {
 }
 
 .Formh1 {
+  color: #fff;
   text-align: center;
   padding-bottom: 0px;
   font-size: 30px;
@@ -107,6 +111,7 @@ header h1 {
 .Labels {
   color: #fff;
   font-family: "Poppins", sans-serif;
+  font-family: "Poppins", sans-serif;
 }
 
 .inputContainer {
@@ -114,14 +119,22 @@ header h1 {
   flex-wrap: wrap;
   height: 350px;
   width: 100%;
+  height: 350px;
+  width: 100%;
   flex-direction: column;
   align-content: flex-start;
   justify-content: flex-start;
   align-items: flex-start;
 }
+.inputContainer > div {
+  padding: 10px;
+  width: 350px;
+}
 .ButtonContainer {
   display: flex;
   flex-direction: row-reverse;
+  width: 100%;
+  transition: all 2s ease;
   width: 100%;
   transition: all 2s ease;
 }
@@ -130,6 +143,8 @@ header h1 {
   position: relative;
   height: 114px;
   width: 141px;
+  border-width: 2px;
+  border-color: #222831;
   background-color: #222831;
   padding: 35px;
   top: -200%;
@@ -141,6 +156,7 @@ header h1 {
 }
 
 .tooltipMenu::after {
+  content: "";
   content: "";
   position: absolute;
   display: block;
@@ -173,6 +189,56 @@ header h1 {
   flex-direction: column;
   align-content: flex-end;
   flex-wrap: nowrap;
+}
+
+.CompanyBoxRhs {
+  display: flex;
+  align-items: flex-end;
+  justify-content: center;
+  flex-direction: column;
+  align-content: flex-end;
+  flex-wrap: nowrap;
+}
+@media screen and (max-width: 620px) {
+  .Form {
+    height: auto;
+  }
+  .inputContainer {
+    height: auto;
+  }
+  .inputContainer {
+    height: auto;
+  }
+  .searchBox:hover {
+    width: 150px;
+    padding: 0 6px;
+  }
+}
+
+.FakeMenu {
+  width: 120%;
+  min-height: 60px;
+  z-index: -1;
+  background-color: #222831;
+  top: 0;
+  margin: auto 0;
+  padding: 5px 32px;
+  position: relative;
+  box-shadow: 0 0 10px 0 rgba(0, 0, 0, 0.3);
+
+  transform: translate(-17px, -17px);
+  display: none;
+}
+@keyframes fadeIn {
+  0% {
+    opacity: 0;
+  }
+  100% {
+    opacity: 1;
+  }
+}
+.MainContainer {
+  transition: all 2s ease-in-out;
 }
 
 .CompanyBoxRhs {
