--- a/client/src/css/style.css
+++ b/client/src/css/style.css
@@ -2,18 +2,38 @@
   padding: 0;
   margin: 0;
   box-sizing: border-box;
+  overflow-y: overlay;
 }
 html {
   font-family: "Poppins", sans-serif;
-  overflow-x: hidden;
 }
 body {
-  background: #222831;
+  background-color: rgb(237, 241, 245) !important;
   padding: 0;
-  overflow-x: hidden;
-  transition: all 2s ease-in-out;
 }
 
+::-webkit-scrollbar {
+  max-height: 0%;
+  width: 5px;
+  background: transparent;
+}
+::-webkit-scrollbar-track {
+  width: 5px;
+  background: transparent;
+}
+::-webkit-scrollbar-thumb {
+  -webkit-border-radius: 10px;
+  border-radius: 5px;
+
+  background: #6d6d6d;
+}
+
+::-webkit-scrollbar-thumb:hover {
+  -webkit-border-radius: 10px;
+  border-radius: 5px;
+
+  background: #5e5e5e;
+}
 header {
   z-index: 3;
   background-color: #222831;
@@ -22,6 +42,7 @@ header {
   box-shadow: 0 0 10px 0 rgba(0, 0, 0, 0.3);
   height: 50px;
   position: relative;
+  overflow: hidden;
 }
 
 header h1 {
@@ -48,7 +69,7 @@ header h1 {
   background-color: #222831;
   color: #fff;
   border-radius: 30px;
-  box-shadow: 3px 2px 2px 0px rgba(0, 0, 0, 0.75);
+  box-shadow: 0px 0px 10px 0px rgba(0, 0, 0, 0.5);
   line-height: 2rem;
 }
 
@@ -136,7 +157,9 @@ header h1 {
   width: 100%;
   transition: all 2s ease;
 }
-
+.tooltip:hover {
+  cursor: pointer;
+}
 .tooltipMenu {
   position: relative;
   height: 114px;
