--- a/client/src/scss/LoginForm.scss
+++ b/client/src/scss/LoginForm.scss
@@ -9,13 +9,15 @@ body {
 }
 
 #background {
+  background-image: url("http://www.transparenttextures.com/patterns/diagmonds.png");
   width: 100vw;
   height: 100vh;
-  opacity: 0.9;
+  opacity: 0.95;
   background-color: #000;
   overflow: hidden;
 }
 #circle1 {
+  background-image: url("http://www.transparenttextures.com/patterns/diagmonds.png");
   opacity: 0.5;
   position: fixed;
   top: -250px;
@@ -33,6 +35,7 @@ body {
   transition: all 0.1s linear;
 }
 #circle2 {
+  background-image: url("http://www.transparenttextures.com/patterns/diagmonds.png");
   position: fixed;
   top: -200px;
   left: -200px;
@@ -49,6 +52,7 @@ body {
   transition: all 0.2s linear;
 }
 #circle3 {
+  background-image: url("http://www.transparenttextures.com/patterns/diagmonds.png");
   position: fixed;
   top: -200px;
   left: -200px;
@@ -65,6 +69,7 @@ body {
   transition: all 0.3s linear;
 }
 #circle4 {
+  background-image: url("http://www.transparenttextures.com/patterns/diagmonds.png");
   position: fixed;
   top: -200px;
   left: -200px;
